# DsKit

./: .gitignore  BUGFIX_SUMMARY_v1.0.3.md  COMPLETE_FEATURE_DOCUMENTATION.md  MANIFEST.in  README.md  WOC_5.0_APPLICATION.md  demo.py  final_validation.py  pyproject.toml  requirements.txt  setup.py  setup_publishing.py  simple_test.py
bug-fix/: BUGFIX_SUMMARY_v1.0.5.md
demos/: 01_data_io_demo.py  03_eda_demo.py  06_modeling_demo.py  demo_cleaning.ipynb
docs/: API_REFERENCE.md  COMPLETE_FEATURE_DOCUMENTATION.md  EXECUTIVE_SUMMARY.md  TEST_RESULTS_README.md  WOC_5.0_APPLICATION.md
dskit/: __init__.py  advanced_modeling.py  advanced_preprocessing.py  advanced_visualization.py  auto_ml.py  cleaning.py  cli.py  comprehensive_eda.py  config.py  core.py  data_auditing.py  database_utils.py  eda.py  evaluation.py  explainability.py  feature_engineering.py  hyperplane.py  imbalance.py  io.py  model_deployment.py  model_validation.py  modeling.py  nlp_utils.py  preprocessing.py  time_series_utils.py  visualization.py
tests/: TESTING.md  test_cleaning.py  test_nlp_utils.py
