[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Ak-dskit"
version = "1.0.4"
authors = [
    {name = "Aksh Agrawal", email = "akshagr10@gmail.com"},
]
description = "A comprehensive data science toolkit with 221+ functions for ML workflows"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "data-science",
    "machine-learning",
    "eda",
    "preprocessing",
    "automl",
    "feature-engineering",
    "hyperplane-analysis",
    "visualization",
    "model-explainability"
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "shap>=0.40.0",
    "openpyxl>=3.0.0",
    "requests>=2.25.0",
    "joblib>=1.0.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
    "pre-commit>=2.15.0",
]
full = [
    "plotly>=5.0.0",
    "wordcloud>=1.8.0",
    "nltk>=3.7",
    "textblob>=0.17.0",
    "hyperopt>=0.2.5",
    "optuna>=2.10.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
    "catboost>=1.0.0",
    "imbalanced-learn>=0.8.0",
    "pandas-profiling>=3.0.0",
    "feature-engine>=1.4.0",
]
visualization = [
    "plotly>=5.0.0",
]
nlp = [
    "wordcloud>=1.8.0",
    "nltk>=3.7",
    "textblob>=0.17.0",
]
automl = [
    "hyperopt>=0.2.5",
    "optuna>=2.10.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
    "catboost>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Programmers-Paradise/DsKit"
Documentation = "https://github.com/Programmers-Paradise/DsKit/blob/main/COMPLETE_FEATURE_DOCUMENTATION.md"
Repository = "https://github.com/Programmers-Paradise/DsKit"
"Bug Tracker" = "https://github.com/Programmers-Paradise/DsKit/issues"
Changelog = "https://github.com/Programmers-Paradise/DsKit/releases"

[project.scripts]
dskit = "dskit.cli:main"

[tool.setuptools.packages.find]
include = ["dskit*"]
exclude = ["tests*", "experiments*"]

[tool.setuptools.package-data]
dskit = ["*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "shap.*",
    "sklearn.*",
    "xgboost.*",
    "lightgbm.*",
    "catboost.*",
    "optuna.*",
    "hyperopt.*",
]
